fix flickering img zoom

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -64,7 +64,7 @@ a:focus {
   outline-offset: 2px;
   outline-width: 2px;
 }
-a:active:focus {
+a:focus:active {
   text-decoration: none;
   color: var(--the-color);
   outline-color: var(--the-color);
