--- a/assets/styles/hacks.scss
+++ b/assets/styles/hacks.scss
@@ -6,12 +6,15 @@ body a {
 
 img {
   &[lazy='loading'] {
+    margin: auto;
+    pointer-events: none;
     height: 16rem;
     width: 22rem;
     max-width: 100%;
     max-height: 100%;
     background-color: var(--grey-vlight);
     padding: 1rem;
+    cursor: progress;
     animation-name: breathing;
     animation-duration: 1s;
     animation-iteration-count: infinite;
@@ -26,12 +29,11 @@ img {
       }
     }
   }
-  &[lazy='loaded'] {
-    opacity: 0;
+  &[lazy='loaded']:not(.medium-zoom-image--open) {
     animation-name: fadein;
-    animation-duration: 1s;
+    animation-duration: 1s; // actually feels faster
     animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+    animation-fill-mode: none;
     animation-direction: normal;
     animation-timing-function: ease-out;
     @keyframes fadein {
@@ -43,12 +45,29 @@ img {
       }
     }
   }
+  &[lazy='error']{
+    content: 'loading error';
+    background: lightcoral;
+  }
 }
 
 // medium zoom
 
+.medium-zoom-image {
+  z-index: 101;
+  &:active {
+    opacity: .8;
+    outline-style: dotted;
+    outline-offset: .1rem;
+    outline-width: .1rem;
+    outline-color: var(--the-color);
+  }
+}
+.medium-zoom--open .medium-zoom-image--open {
+  z-index: 101;
+}
+
 .medium-zoom-overlay {
-  opacity: 0;
   background-color: #fff;
   z-index: 100;
   box-shadow: 0 0 0 0 transparent;
@@ -69,24 +88,8 @@ img {
   }
 }
 .medium-zoom--open .medium-zoom-overlay {
-  opacity: 1;
   box-shadow: 0 0 0 5vw var(--the-color);
   border-radius: 1rem;
-}
-
-.medium-zoom-image {
-  z-index: 101;
-  &[lazy='loading'] {
-    margin: auto;
-    pointer-events: none;
-  }
-  &:active {
-    opacity: 0.8;
-    //@extend a:active;
-  }
-}
-.medium-zoom--open .medium-zoom-image--open {
-  z-index: 101;
 }
 
 // body:not(.medium-zoom--open) .medium-zoom-image--open {
